force-app/main/default/objects/Contact/fields/Description_PI__c.field-meta.xml
<CustomField>
    <fullName>Description_PI__c</fullName>
    <description>Used to capture Description from Pardot Forms (Contacts US) etc. Mapped with Leads Description PI 
Will be used in Case Mapping process</description>
    <label>Description PI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>