force-app/main/default/objects/Contact/fields/Form_Name_PI__c.field-meta.xml
<CustomField>
    <fullName>Form_Name_PI__c</fullName>
    <defaultValue>&quot;Salesforce Record&quot;</defaultValue>
    <label>Form Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>