force-app/main/default/objects/Contact/fields/Instrument_PI__c.field-meta.xml
<CustomField>
    <fullName>Instrument_PI__c</fullName>
    <label>Instrument Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Instrument</valueSetName>
    </valueSet>
</CustomField>