force-app/main/default/objects/Contact/fields/Location_PI__c.field-meta.xml
<CustomField>
    <fullName>Location_PI__c</fullName>
    <label>Location Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations</valueSetName>
    </valueSet>
</CustomField>