force-app/main/default/objects/Contact/fields/Pardot_Source__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Source__c</fullName>
    <label>Pardot Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>