force-app/main/default/objects/Contact/fields/PI_Data_Sync__c.field-meta.xml
<CustomField>
    <fullName>PI_Data_Sync__c</fullName>
    <label>PI Data Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>