force-app/main/default/objects/Contact/fields/PI_Data_Sync_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PI_Data_Sync_Date_Time__c</fullName>
    <description>Update this field when PI Data Sync is Updated as TRUE 
Update NOW() - 45 mins in this field</description>
    <label>PI Data Sync Date/Time</label>
    <type>DateTime</type>
</CustomField>