force-app/main/default/objects/Contact/fields/Unique_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Referral_Code__c</fullName>
    <label>Unique Referral Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>