force-app/main/default/objects/Contact/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>Ads related info - Pardot</description>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>