force-app/main/default/objects/Contact/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>Ads related info - Pardot</description>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>