force-app/main/default/objects/Contact/listViews/New_Contact.listView-meta.xml
<ListView>
    <fullName>New_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>New Contact</label>
</ListView>